--- a/windspeed.html
+++ b/windspeed.html
@@ -80,10 +80,7 @@
 
 
     <article>
-        <p>As shown in the graph above, cities between 5 and 10 in wind speed are located mostly north of the equator.
-            Each plot in the graph represents a city in the data and as we can see, the bottom right corner of the plot
-            is the most densely
-            populated.
+        <p>more charts
 
         </p>
     </article>
