--- a/cloudiness.html
+++ b/cloudiness.html
@@ -61,7 +61,7 @@
   </article>
 
   <a href="https://frozenbrother.github.io/Web-Design-Challenge/cloudiness.html">
-    <img src="images/Lat_vs_Cloud.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/cloudiness.html"
+    <img src="Images/Lat_vs_Cloud.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/cloudiness.html"
       class="center" />
   </a>
 
