--- a/comparisons.html
+++ b/comparisons.html
@@ -76,13 +76,13 @@
       <div class="column">
         <h3>vs. Max Temp</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/maxtemp.html" id="maxtemp">
-          <img src="images/Lat_vs_Temp.png" class="rounded float-left" alt="Wind Map">
+          <img src="Images/Lat_vs_Temp.png" class="rounded float-left" alt="Wind Map">
         </a>
       </div>
       <div class="column">
         <h3>vs. Humidity</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/humidity.html">
-          <img src="images/Lat_vs_Hum.png" class="rounded float-left" alt="Wind Map">
+          <img src="Images/Lat_vs_Hum.png" class="rounded float-left" alt="Wind Map">
         </a>
       </div>
     </div>
@@ -90,13 +90,13 @@
       <div class="column">
         <h3>vs. Cloudiness</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/cloudiness.html">
-          <img src="images/Lat_vs_Cloud.png" class="rounded float-left" alt="Wind Map">
+          <img src="Images/Lat_vs_Cloud.png" class="rounded float-left" alt="Wind Map">
         </a>
       </div>
       <div class="column">
         <h3>vs. Wind Speed</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/windspeed.html">
-          <img src="images/Lat_vs_Windspeed.png" class="rounded float-left" alt="Wind Map">
+          <img src="Images/Lat_vs_Windspeed.png" class="rounded float-left" alt="Wind Map">
         </a>
       </div>
     </div>
