--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </article>
 
 
-  <img style="float: left; margin: 15px 100px 0px;" src="images/Lat_vs_Cloud.png" width="200" />
+  <img style="float: left; margin: 15px 100px 0px;" src="Images/Lat_vs_Cloud.png" width="200" />
 
   <p>Made website to display WeatherPy Challenge!</p>
 
@@ -91,14 +91,14 @@
       <div class="column">
         <h3>vs. Max Temp</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/maxtemp.html">
-          <img style="float: left; margin: 15px 15px 0px;" src="images/Lat_vs_Temp.png"
+          <img style="float: left; margin: 15px 15px 0px;" src="Images/Lat_vs_Temp.png"
             alt="https://frozenbrother.github.io/Web-Design-Challenge/maxtemp.html" width="200" />
         </a>
       </div>
       <div class="column">
         <h3>vs. Humidity</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/humidity.html">
-          <img style="float: left; margin: 15px 15px 0px;" src="images/Lat_vs_Hum.png"
+          <img style="float: left; margin: 15px 15px 0px;" src="Images/Lat_vs_Hum.png"
             alt="https://frozenbrother.github.io/Web-Design-Challenge/humidity.html" width="200" />
         </a>
       </div>
@@ -107,14 +107,14 @@
       <div class="column">
         <h3>vs. Cloudiness</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/cloudiness.html">
-          <img style="float: left; margin: 15px 15px 0px;" src="images/Lat_vs_Cloud.png"
+          <img style="float: left; margin: 15px 15px 0px;" src="Images/Lat_vs_Cloud.png"
             alt="https://frozenbrother.github.io/Web-Design-Challenge/cloudiness.html" width="200" />
         </a>
       </div>
       <div class="column">
         <h3>vs. Wind Speed</h3>
         <a href="https://frozenbrother.github.io/Web-Design-Challenge/windspeed.html">
-          <img style="float: left; margin: 15px 15px 0px;" src="images/Lat_vs_Windspeed.png"
+          <img style="float: left; margin: 15px 15px 0px;" src="Images/Lat_vs_Windspeed.png"
             alt="https://frozenbrother.github.io/Web-Design-Challenge/windspeed.html" width="200" />
         </a>
       </div>
