--- a/windspeed.html
+++ b/windspeed.html
@@ -74,7 +74,7 @@
     </article>
 
     <a href="https://frozenbrother.github.io/Web-Design-Challenge/windspeed.html">
-        <img src="images/Lat_vs_Windspeed.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/windspeed.html"
+        <img src="Images/Lat_vs_Windspeed.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/windspeed.html"
             class="center" />
     </a>
 
