--- a/humidity.html
+++ b/humidity.html
@@ -67,7 +67,7 @@
   </article>
 
   <a href="https://frozenbrother.github.io/Web-Design-Challenge/humidity.html">
-    <img src="images/Lat_vs_Hum.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/humidity.html"
+    <img src="Images/Lat_vs_Hum.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/humidity.html"
       class="center" />
   </a>
 
