--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="https://frozenbrother.github.io/Web-Design-Challenge/index.html">
         <p>
-          <header>Latitude
+          <header>Home
       </a></header>
       </p></a>
 
