--- a/maxtemp.html
+++ b/maxtemp.html
@@ -70,7 +70,7 @@
   </article>
 
   <a href="https://frozenbrother.github.io/Web-Design-Challenge/maxtemp.html">
-    <img src="images/Lat_vs_Temp.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/maxtemp.html"
+    <img src="Images/Lat_vs_Temp.png" alt="https://frozenbrother.github.io/Web-Design-Challenge/maxtemp.html"
       class="center" />
   </a>
 
